--- a/gtrr.css
+++ b/gtrr.css
@@ -68,33 +68,67 @@ a{
 .btn {
    display: inline-block;
    padding: 12px 24px;
-   background-color: #0072CE;
+   background-color: #0D7ADC;
    color: #fff;
    border-radius: 8px;
    font-weight: 600;
    transition: 0.3s;
  }
  .btn:hover {
-   background-color: #005fa3;
+   background-color: #0D7ADC;
  }
- .ine4{
+ .ine5{
    display: flex;
+   align-items: center;
+   gap: 30px;
+ }
+ .t9{
+   margin-left: 675px;
+ }
+ .line10{
+ height: 5px;
+ width: 100px;
+ background-color: #0D7ADC;
+ margin-left: 700px;
+
+ }
+ .ine5{
+   margin-top: 50px;
  }
  .ine6 {
-   height: 500px;
-   width: 300px;
-   margin: 0;
-   background-image: url("image/myimage2.png.png");}
+   height: 445px;
+   width:385px;
+   margin-left: 135px;
+   background-image: url("image/myimage2.png.png");
+}
  .ine7 {
-   height: 500px;
-   width: 300px;
+   height: 485px;
+   width:425px;
    margin: 0;
-   background-image: url("image/myimage3.png.png");}
+   background-image: url("image/myimage3.png.png");
+}
    .ine8 {
-height: 500px;
-width: 300px;
+      height: 445px;
+      width:385px;
 margin: 0;
-background-image: url("image/myimage4.png.png");}
-.t9{
-   margin: auto;
+background-image: url("image/myimage4.png.png");
+}
+.t10{
+   margin-left: 43px;
+   margin-top: 310px;
+}
+.t11{
+   margin-left: 55px;
+   margin-top: 330px;
+}
+.t12{
+   margin-left: 27px;
+   margin-top: 310px;
+}
+.in3 {
+   height: 600px;
+   width: 1300px;
+   margin-top: 50px;
+   margin-left: 130px;
+   background-image: url("image/myimage5.png.png");
 }
