--- a/gtrr.css
+++ b/gtrr.css
@@ -9,17 +9,14 @@
 
 
 }
-head{
-   position: fixed;
 
-}
 .logo{
     height: 80px;
     background-color: #0D7ADC;
     width: 459px;
     margin-right: 10%;
     display: flex;
-    position: fixed;
+
 }
 .menu{
     height: 80px;
@@ -680,4 +677,76 @@ h1 {
       color: #333;
       margin-top: 16px;
     }
+
     
+    .footer {
+      background-color: #111;
+      color: #fff;
+    }
+    
+    .footer-top {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      padding: 40px 20px;
+      max-width: 1200px;
+      margin: 0 auto;
+      border-top: 4px solid #0e71eb;
+    }
+    
+    .footer-block {
+      flex: 1;
+      min-width: 200px;
+      margin-bottom: 20px;
+    }
+    
+    .footer-block h4 {
+      font-size: 16px;
+      border-bottom: 2px solid #0e71eb;
+      display: inline-block;
+      margin-bottom: 15px;
+    }
+    
+    .footer-block ul {
+      list-style: none;
+      padding: 0;
+    }
+    
+    .footer-block ul li {
+      margin-bottom: 10px;
+    }
+    
+    .footer-block a {
+      color: #ccc;
+      text-decoration: none;
+    }
+    
+    .footer-block a:hover {
+      color: #fff;
+    }
+    
+    .logo {
+      max-width: 120px;
+      margin-bottom: 10px;
+    }
+    
+    .social a {
+      margin-right: 10px;
+    }
+    
+    .footer-bottom {
+      border-top: 1px solid #555;
+      padding: 10px 20px;
+      text-align: center;
+      font-size: 14px;
+      color: #aaa;
+    }
+    
+    .F{
+width: 20px ;  
+height: 20px;
+ }
+ .I{
+   width: 20px ;  
+   height: 20px;
+    }
